# forge

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  SPONSORS.md  STATE.md  deny.toml  install.ps1  install.sh  probe_methods.sh
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/forge-assay/: action.yml
.github/workflows/: ci.yml  e2e.yml  release.yml  security.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: assay_output.rs  balance.rs  bench.rs  benchmarks.rs  bridge_stats.rs  context_windows.rs  doctor.rs  image_input.rs  lib.rs  live_observer.rs  local.rs  main.rs  mcp_agent.rs  mcp_serve.rs  remote.rs  replay.rs  update.rs  update_check.rs
crates/forge-cli/src/cli/: args.rs  dispatch.rs
crates/forge-cli/src/cli/commands/: assay.rs  git.rs  import.rs  lattice.rs  local.rs  marketplace.rs  mcp.rs  memory.rs  migrate.rs  mod.rs  models.rs  provider.rs  run.rs  skill.rs  tests.rs
crates/forge-cli/src/cli/commands/run/: atfiles.rs  copy.rs  dispatch.rs  pickers.rs
crates/forge-cli/tests/: mcp_serve_e2e.rs  tui_e2e.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: agents.rs  lib.rs  mcp.rs  oauth.rs  secret_store.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: assay.rs  hooks.rs  lib.rs  llm_router.rs  permission.rs  snapshot.rs  subagent.rs  tokens.rs  workflow.rs  worktree.rs
crates/forge-core/tests/: bridge_snapshot_env.rs  checkpoint_cwd.rs  worktree_isolation.rs
crates/forge-index/: Cargo.toml
crates/forge-index/src/: embed.rs  extract.rs  lib.rs  map.rs  retrieve.rs  watch.rs
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: lib.rs  registry.rs  rpc.rs  server.rs  types.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: handler.rs  lib.rs  oauth.rs  sse.rs  transport.rs
crates/forge-mesh/: Cargo.toml
crates/forge-mesh/src/: bench.rs  capability.rs  catalog.rs  explain.rs  lib.rs  pricing.rs
crates/forge-provider/: Cargo.toml
crates/forge-provider/src/: cli_provider.rs  embedder.rs  genai_provider.rs  lib.rs  mock.rs  tool_recovery.rs
crates/forge-provider/tests/: cli_bridge_live.rs  genai_contract.rs  ollama_live.rs
crates/forge-skills/: Cargo.toml
crates/forge-skills/src/: from_session.rs  frontmatter.rs  lib.rs  normalize.rs  template.rs  tests.rs
crates/forge-store/: Cargo.toml
crates/forge-store/src/: lib.rs  memory.rs  schema.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: core_tools.rs  lattice_tool.rs  lib.rs  sandbox.rs  shell.rs  web.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: app.rs  commands.rs  config_editor.rs  driver.rs  init_wizard.rs  keybind_configurator.rs  keybinds.rs  lib.rs  render.rs  select.rs  transcript.rs  tui.rs  workflow_view.rs
crates/forge-types/: Cargo.toml
crates/forge-types/src/: lib.rs
crates/forge-workflow/: Cargo.toml
crates/forge-workflow/src/: lib.rs
crates/xtasks/: Cargo.toml
crates/xtasks/src/: bench_lattice.rs  dist.rs  main.rs  probe_retrieve.rs  tasks.rs
docs/: RELEASING-crates.md  ROADMAP-v2-DELIVERED.md  STABILITY.md  config-schema.json  known-issues.md  quickstart.md  roadmap.md
docs/architecture/: 01-requirements.md  02-architecture.md  containers.puml  context.puml  data-model.puml  flow-agent-turn.puml
docs/architecture/decisions/: 0001-rust-and-tokio-async-runtime.md  0002-modular-monolith-single-binary.md  0003-provider-abstraction-via-genai.md  0004-tui-ratatui-crossterm.md  0005-persistence-rusqlite-bundled.md  0006-model-mesh-rule-based-routing.md  0007-config-figment-secrets-keyring.md  0008-tool-permission-modes.md  0009-mcp-client-crate-and-external-side-effect.md  0010-lattice-multilang-tags-queries.md  0011-benchmark-driven-model-ranking.md
docs/assets/: README.md  demo.tape  forge-demo.tape
docs/benchmarks/: results.md  swe-bench.md
docs/ci/: forge-review.yml
docs/features/: analysis-mode.md  ask-user-question.md  auto-discovery-mesh.md  code-intelligence.md  command-skill-system.md  competitive-wave.md  context-compaction.md  fix-budget-cap.md  fix-permission-rules.md  forge-workflow.md  free-models.md  hooks.md  keybinds.md  lattice-token-savings.md  mcp-client.md  mesh-classifier.md  mesh-routing-finish.md  model-health-failover.md  provider-cost-routing.md  provider-integrations.md  provider-test-strategy.md  remote-control.md  session-replay.md  shell-error-interceptor.md  shell-sandbox.md  shell-tool.md  subagent-orchestration.md  temper-modes.md  tui-header-statusline.md  tui-inline-scrollback.md  tui-rich-rendering.md  tui-token-counter.md  web-tools.md  whitehot-effort.md
docs/harness/: bridge-completion.md  competitive-analysis.md  competitor-gap-analysis.md  why-forge-is-a-better-harness.md
docs/rfcs/: RFC-mcp-oauth.md  cli-bridge-full-harness.md  forge-workflow.md  session-management-and-commands.md  subagent-orchestration.md
homebrew/: forge.rb
packaging/aur/: .SRCINFO  PKGBUILD
packaging/scoop/: forge.json
scripts/: bridge-e2e.sh  e2e-battery.sh  e2e-docker.sh  rebuild.sh  setup-dev.sh  test-installer-config-safe.sh  tui-drive.sh  update-brew-formula.sh
scripts/tui-scripts/: copy-command.txt  live-complex-unpinned.txt  live-weak-bypass-e2e.txt  plan-flow.txt  smoke-auth-churn-2turn.txt  task-panel.txt  workload-bugfix-loop.txt
