[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.4"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Floris Voskamp"]
repository = "https://github.com/florisvoskamp/forge"
description = "Fast, model-agnostic AI coding harness and CLI in Rust."

[workspace.dependencies]
# Internal crates
forge-types = { path = "crates/forge-types", version = "0.4.4" }
forge-config = { path = "crates/forge-config", version = "0.4.4" }
forge-core = { path = "crates/forge-core", version = "0.4.4" }
forge-index = { path = "crates/forge-index", version = "0.4.4" }
forge-lsp = { path = "crates/forge-lsp", version = "0.4.4" }
forge-mcp = { path = "crates/forge-mcp", version = "0.4.4" }
forge-mesh = { path = "crates/forge-mesh", version = "0.4.4" }
forge-provider = { path = "crates/forge-provider", version = "0.4.4" }
forge-skills = { path = "crates/forge-skills", version = "0.4.4" }
forge-store = { path = "crates/forge-store", version = "0.4.4" }
forge-tools = { path = "crates/forge-tools", version = "0.4.4" }
forge-tui = { path = "crates/forge-tui", version = "0.4.4" }

# External (pinned to current stable as of 2026-06; see ADRs)
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util", "time", "net"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
genai = "0.6"
# unstable-rendered-line-info: Paragraph::line_count, used to size insert_before so
# scrollback lines never clip or overlap the inline viewport. Compiles on stable.
ratatui = { version = "0.30", features = [
    "unstable-rendered-line-info",
    # insert_before MUST use terminal scroll-regions (ScrollUpInRegion + append_lines), NOT a
    # synchronous cursor-position DSR query. Without this, insert_before calls
    # crossterm::cursor::position() which writes `ESC[6n` and reads stdin for the reply — racing
    # our event-read loop on the same stdin → the whole TUI freezes (Ctrl-C dead).
    "scrolling-regions",
] }
crossterm = "0.29"
globset = "0.4"
shell-words = "1"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = { version = "0.12", default-features = false }
# default-fancy = bundled syntaxes/themes with the pure-Rust fancy-regex backend
# (no oniguruma C dep → clean cross-compile, smaller footprint).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = "2"
regex = "1"
# Real BPE token counting for precise context accounting (not a chars/token estimate). Bundles the
# o200k_base / cl100k_base vocabularies in-crate, so it works fully offline.
tiktoken-rs = "0.6"
# default-features off + rustls: reuse genai's existing rustls stack (no OpenSSL C dep).
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "form", "rustls"] }
# Remote control: a tiny HTTP + WebSocket server so a phone/desktop browser can drive the
# running `forge chat` session. axum bundles hyper + tokio-tungstenite; the WS layer needs
# `ws` (axum) which pulls tungstenite. qrcode renders a scan-to-connect matrix into the TUI.
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
qrcode = "0.14"
# Cross-platform hardware probe (total RAM, CPU cores) to recommend a local-LLM size. default
# off + only the components we read, to keep the dep light.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[profile.release]
lto = "thin"
strip = true
