[package]
name = "forge-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forge — the model-agnostic AI coding agent. One harness, every provider."
repository.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
name = "forge_cli"

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-core.workspace = true
forge-index.workspace = true
forge-lsp.workspace = true
forge-mcp.workspace = true
forge-mesh.workspace = true
forge-provider.workspace = true
forge-skills.workspace = true
forge-tools.workspace = true
forge-store.workspace = true
crossterm.workspace = true
forge-tui.workspace = true
clap.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rmcp = { version = "2.0.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { workspace = true }
serde_json.workspace = true
toml = "1.1"
reqwest = { workspace = true }
futures.workspace = true
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
qrcode = { workspace = true }
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
flate2 = "1.1.9"
tar = "0.4.46"
rcgen = "0.14"
sysinfo = { workspace = true }
self_update = { version = "0.44.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "reqwest", "rustls"] }

[dev-dependencies]
portable-pty = "0.9"
tower = { version = "0.5", features = ["util"] }
