[package]
name = "forge-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layered configuration and secret resolution for Forge."
repository.workspace = true

[dependencies]
forge-types.workspace = true
serde.workspace = true
thiserror.workspace = true
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
directories = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
