[package]
name = "adforge-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layered configuration and secret resolution for Forge."
repository.workspace = true

[lib]
name = "forge_config"

[dependencies]
forge-types.workspace = true
forge-skills.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
figment = { version = "0.10", features = ["toml", "env"] }
toml = "1.1"
directories = "6"
# Linux: the Secret Service backend (gnome-keyring/KWallet) persists to disk — unlike the
# `linux-native` keyutils backend, which is wiped on logout/reboot (the "keyring keeps resetting"
# bug). Use the `async-secret-service` impl (pure-Rust zbus) over `async-io` so it needs NO system
# libdbus (`sync-secret-service` links libdbus-sys, which breaks builds on hosts without
# libdbus-1-dev, incl. CI). `crypto-rust` supplies the transport cipher. Where the Secret Service
# is unreachable (headless), the encrypted-file fallback in secret_store.rs takes over.
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "async-io", "crypto-rust"] }
sha2 = "0.11"
base64 = "0.22"
rand = "0.9"
# AEAD for the encrypted-file secret fallback (used when no OS keyring/Secret Service is reachable).
chacha20poly1305 = "0.10"

[dev-dependencies]
tempfile = "3"
