[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forge session orchestrator: the agent loop and permission broker."
repository.workspace = true

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-mesh.workspace = true
forge-provider.workspace = true
forge-tools.workspace = true
forge-store.workspace = true
forge-tui.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
globset.workspace = true
shell-words.workspace = true

[dev-dependencies]
tokio = { workspace = true }
