[package]
name = "forge-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lattice — native tree-sitter code-intelligence graph persisted in SQLite."

[dependencies]
forge-types = { workspace = true }
forge-store = { workspace = true }
forge-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.24"
tree-sitter-tags = "0.24.7"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
sha2 = "0.10"
notify-debouncer-mini = "0.7.0"
