[package]
name = "adforge-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lattice — native tree-sitter code-intelligence graph persisted in SQLite."

[lib]
name = "forge_index"

[dependencies]
forge-types = { workspace = true }
forge-store = { workspace = true }
forge-config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.26"
tree-sitter-tags = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-php = "0.24.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-lua = "0.5.0"
tree-sitter-ocaml = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-haskell = "0.23.1"
tree-sitter-scala = "0.26.0"
tree-sitter-kotlin-ng = "1.1.0"
sha2 = "0.11"
ignore = "0.4"
notify-debouncer-mini = "0.7.0"
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
webpki-root-certs = "1"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
