[package]
name = "forge-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP client: connect Forge to external Model Context Protocol servers (mcp-client.md)."
repository.workspace = true

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
futures.workspace = true
reqwest = { workspace = true }
# Mozilla's bundled root CAs so MCP HTTPS works on bare/CA-less hosts (mirrors forge-provider;
# forge-mcp can't depend on forge-provider). Without it reqwest builds against the OS trust store
# and panics internally on a system that has none.
webpki-root-certs = "1"
rmcp = { version = "1.7.0", default-features = false, features = [
    "client",
    "server",
    "transport-async-rw",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }

[dev-dependencies]
tokio = { workspace = true }
