[package]
name = "forge-mesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Model Mesh: rule-based task routing for cost x capability (ADR-0006)."
repository.workspace = true

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
