[package]
name = "forge-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-agnostic model interface for Forge, backed by genai (ADR-0003)."
repository.workspace = true

[dependencies]
forge-types.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
genai.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.7"
