[package]
name = "forge-agent-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-agnostic model interface for Forge, backed by genai (ADR-0003)."
repository.workspace = true

[lib]
name = "forge_provider"

[dependencies]
forge-types.workspace = true
forge-config.workspace = true
forge-index.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
genai.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
webpki-root-certs = "1"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.8"
