[package]
name = "forge-agent-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Slash-command + skill catalog: discovery, frontmatter, templates, Claude-Code readers."

[lib]
name = "forge_skills"

[dependencies]
forge-types = { workspace = true }
tracing = { workspace = true }
