[package]
name = "adforge-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local SQLite persistence for Forge sessions, messages, costs, and decisions."
repository.workspace = true

[lib]
name = "forge_store"

[dependencies]
forge-types.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
serde_json.workspace = true
chrono.workspace = true
r2d2 = "0.8.10"
