[package]
name = "forge-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tool trait and core coding tools (read/write/shell/search) for Forge."
repository.workspace = true

[dependencies]
forge-types.workspace = true
forge-index.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
reqwest.workspace = true
webpki-root-certs = "1"
globset.workspace = true
regex.workspace = true
tracing.workspace = true

portable-pty = "0.9"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
