[package]
name = "forge-agent-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Presenter abstraction and renderers (headless now; ratatui TUI next) for Forge."
repository.workspace = true

[lib]
name = "forge_tui"

[dependencies]
forge-config.workspace = true
forge-types.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
# Cell width of glyphs (CJK/emoji = 2 cells) so mouse-selection maps screen columns → chars correctly.
unicode-width = "0.2"
tokio.workspace = true
pulldown-cmark.workspace = true
syntect.workspace = true
similar.workspace = true
