[package]
name = "forge-agent-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared domain types for Forge (messages, usage, routing, permissions)."
repository.workspace = true

[lib]
name = "forge_types"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
