[package]
name = "xtasks"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "xtasks"
path = "src/main.rs"

[dependencies]
forge-core = { workspace = true }
forge-config = { workspace = true }
forge-index = { workspace = true }
forge-store = { workspace = true }
forge-types = { workspace = true }
forge-provider = { workspace = true }
forge-mesh = { workspace = true }
forge-tools = { workspace = true }
forge-tui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
