[package]
name = "xtasks"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "xtasks"
path = "src/main.rs"

[dependencies]
forge-core = { workspace = true }
forge-config = { workspace = true }
forge-index = { workspace = true }
forge-store = { workspace = true }
forge-types = { workspace = true }
forge-provider = { workspace = true }
forge-mesh = { workspace = true }
forge-tools = { workspace = true }
forge-tui = { workspace = true }
# forge-cli's library facade (lib.rs) exposes `command()` for completion/man generation. Path dep
# (xtasks is publish=false, never released), so no version needed.
forge-cli = { path = "../forge-cli" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
clap_mangen = "0.2"
